# BITiC-DIP2021

./: .gitignore  CMakeLists.txt  Makefile  bmp.cpp  bmp.h  build.sh  demo.cpp  readme.md  reamd.md  test.cpp
BITiC/: CMakeLists.txt
BITiC/include/: BITiC.hpp  color.hpp  lib.hpp
BITiC/src/: CMakeLists.txt  binary.cpp  bmp.cpp  bmp_io.cpp  color.cpp  conv.cpp  filter.cpp  geo_trans.cpp  histogram.cpp  yuv.cpp
CppBmpToolkits/: CMakeLists.txt
CppBmpToolkits/include/: bmp.hpp
CppBmpToolkits/src/: CMakeLists.txt  binary.cpp  bmp.cpp  bmp_io.cpp  yuv.cpp
